force-app/main/default/objects/Match_Participation__c/Match_Participation__c.object-meta.xml
<CustomObject>
    <description>Junction object linking people to fixtures (replaces OpportunityContactRole)</description>
    <label>Match Participation</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Match Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>