force-app/main/default/objects/Match_Participation__c/fields/Captain__c.field-meta.xml
<CustomField>
    <fullName>Captain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Captain</label>
    <type>Checkbox</type>
</CustomField>