force-app/main/default/objects/Match_Participation__c/fields/Man_of_Match__c.field-meta.xml
<CustomField>
    <fullName>Man_of_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Man of Match</label>
    <type>Checkbox</type>
</CustomField>