force-app/main/default/objects/Match_Participation__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Participations</relationshipLabel>
    <relationshipName>Match_Participations</relationshipName>
    <type>MasterDetail</type>
</CustomField>