force-app/main/default/objects/Match_Participation__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Match Participations (Player)</relationshipLabel>
    <relationshipName>Match_Participations_Player</relationshipName>
    <description>The player who participated in this fixture</description>
</CustomField>