force-app/main/default/objects/Match_Participation__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>