force-app/main/default/objects/Match_Participation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player</fullName>
                <default>true</default>
                <label>Player</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Head Coach</fullName>
            </value>
            <value>
                <fullName>Assistant Coach</fullName>
            </value>
            <value>
                <fullName>Goalkeeper Coach</fullName>
            </value>
            <value>
                <fullName>Fitness Coach</fullName>
            </value>
            <value>
                <fullName>Referee</fullName>
            </value>
            <value>
                <fullName>Assistant Referee</fullName>
            </value>
            <value>
                <fullName>Fourth Official</fullName>
            </value>
            <value>
                <fullName>VAR Official</fullName>
            </value>
            <value>
                <fullName>Umpire</fullName>
            </value>
            <value>
                <fullName>Third Umpire</fullName>
            </value>
            <value>
                <fullName>Match Commissioner</fullName>
            </value>
            <value>
                <fullName>Physiotherapist</fullName>
            </value>
            <value>
                <fullName>Team Doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>