force-app/main/default/objects/Match_Participation__c/fields/Starting_Lineup__c.field-meta.xml
<CustomField>
    <fullName>Starting_Lineup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starting Lineup</label>
    <type>Checkbox</type>
</CustomField>