force-app/main/default/objects/Match_Participation__c/fields/Stats_Goals__c.field-meta.xml
<CustomField>
    <fullName>Stats_Goals__c</fullName>
    <label>Stats Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>