force-app/main/default/objects/Match_Participation__c/fields/Stats_JSON__c.field-meta.xml
<CustomField>
    <fullName>Stats_JSON__c</fullName>
    <label>Stats JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>