force-app/main/default/objects/Match_Participation__c/fields/Stats_Runs__c.field-meta.xml
<CustomField>
    <fullName>Stats_Runs__c</fullName>
    <label>Stats Runs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>