force-app/main/default/objects/Match_Participation__c/fields/Stats_Yellow_Cards__c.field-meta.xml
<CustomField>
    <fullName>Stats_Yellow_Cards__c</fullName>
    <label>Stats Yellow Cards</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>